fix hamburger display on small screens

--- a/core/static/css/shared.css
+++ b/core/static/css/shared.css
@@ -103,6 +103,14 @@ nav div.hamburger {
   top: 4vh;
 }
 
+@media only screen and (max-width: 405px) {
+  body.overlay-open nav div.hamburger {
+    position: absolute;
+    top: 5px;
+    right: 0px;
+  }
+}
+
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
